Update max-width to 1800px

--- a/assets/base.css
+++ b/assets/base.css
@@ -77,7 +77,7 @@
 /* base */
 
 .page-width {
-  max-width: var(--page-width);
+  max-width: 1800px;
   margin: 0 auto;
   padding: 0 1.5rem;
 }
@@ -136,7 +136,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   }
 
   .page-width-desktop {
-    max-width: var(--page-width);
+    max-width: 1800px;
     padding: 0 5rem;
   }
 }
